- MFH:   . Fixed bug #29064 (Exact numeric/decimal/money datatypes lose precision)   . Fixed bug #27843 (sybase_query() triggers (spurious?) notices when     query is a stored procedure)   . Fixed multiple memory leaks with sybase_unbuffered_query()   . Changed sybase_query() to ignore store_results = false in  buffering     mode, it would yield unpredictable results   . Fixed sybase_unbuffered_query() when used with store_results = false   . Changed sybase_fetch_object() to ignore second argument when passed     as NULL   . Made sybase_data_seek() error message more verbose   . Fixed memory leak in shutdown when not all rows where selected in an     unbuffered query # sort of, empty_string -> STR_EMPTY_ALLOC patch ommitted